--- a/jsf22-example01/src/main/webapp/personDetails.xhtml
+++ b/jsf22-example01/src/main/webapp/personDetails.xhtml
@@ -7,21 +7,29 @@
 <f:metadata>
     <f:viewParam name="id" value="#{personPage.selectedId}"/>
     <f:viewAction action="#{personPage.loadPerson}"/>
+    <f:viewAction action="#{personPage.addInfoMessage}" onPostback="true"/>
 </f:metadata>
 
 <h:head>
     <title>JSFlive JSF 2.2 - Example 01</title>
 </h:head>
 <h:body>
-    <h:panelGrid columns="2">
-        <h:outputText value="ID:"/>
-        <h:outputText value="#{personPage.selectedPerson.id}"/>
-        <h:outputText value="Name:"/>
-        <h:outputText value="#{personPage.selectedPerson.name}"/>
-        <h:outputText value="Email:"/>
-        <h:outputText value="#{personPage.selectedPerson.email}"/>
-    </h:panelGrid>
+    <h:form id="form">
+        <h:messages/>
+        <h:panelGrid columns="2">
+            <h:outputText value="ID:"/>
+            <h:outputText value="#{personPage.selectedPerson.id}"/>
+            <h:outputText value="Name:"/>
+            <h:outputText value="#{personPage.selectedPerson.name}"/>
+            <h:outputText value="Email:"/>
+            <h:outputText value="#{personPage.selectedPerson.email}"/>
+        </h:panelGrid>
 
-    <h:link value="Back" outcome="personList"/>
+        <h:commandButton value="Show Message (postback)"/>
+        <h:commandButton value="Show Message (redirect)"
+                action="personDetails?faces-redirect=true&amp;includeViewParams=true"/>
+        <br/>
+        <h:link value="Back" outcome="personList"/>
+    </h:form>
 </h:body>
 </html>
