switched to new JSF 2.2 taglib namespaces

--- a/jsf22-resource-dir/src/main/webapp/test.xhtml
+++ b/jsf22-resource-dir/src/main/webapp/test.xhtml
@@ -2,9 +2,9 @@
 <!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Transitional//EN"
         "http://www.w3.org/TR/xhtml1/DTD/xhtml1-transitional.dtd">
 <html xmlns="http://www.w3.org/1999/xhtml"
-      xmlns:f="http://java.sun.com/jsf/core"
-      xmlns:h="http://java.sun.com/jsf/html"
-      xmlns:jl="http://java.sun.com/jsf/composite/jsflive">
+      xmlns:f="http://xmlns.jcp.org/jsf/core"
+      xmlns:h="http://xmlns.jcp.org/jsf/html"
+      xmlns:jl="http://xmlns.jcp.org/jsf/composite/jsflive">
 <h:head>
     <title>JSFlive JSF 2.2 - Example 03</title>
 </h:head>
