--- a/jsf22-composite-component-tags/src/main/webapp/WEB-INF/resources/test/panelBox.xhtml
+++ b/jsf22-composite-component-tags/src/main/webapp/WEB-INF/resources/test/panelBox.xhtml
@@ -1,9 +1,9 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <ui:composition xmlns="http://www.w3.org/1999/xhtml"
-        xmlns:h="http://java.sun.com/jsf/html"
-        xmlns:cc="http://java.sun.com/jsf/composite"
-        xmlns:ui="http://java.sun.com/jsf/facelets"
-        xmlns:c="http://java.sun.com/jsp/jstl/core">
+        xmlns:h="http://xmlns.jcp.org/jsf/html"
+        xmlns:cc="http://xmlns.jcp.org/jsf/composite"
+        xmlns:ui="http://xmlns.jcp.org/jsf/facelets"
+        xmlns:c="http://xmlns.jcp.org/jsp/jstl/core">
 
     <cc:interface>
         <cc:attribute name="styleClass" default="box"/>
