--- a/jsf22-resource-dir/src/main/webapp/WEB-INF/resources/jsflive/collapsiblePanel.xhtml
+++ b/jsf22-resource-dir/src/main/webapp/WEB-INF/resources/jsflive/collapsiblePanel.xhtml
@@ -1,9 +1,9 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <ui:composition xmlns="http://www.w3.org/1999/xhtml"
-        xmlns:h="http://java.sun.com/jsf/html"
-        xmlns:f="http://java.sun.com/jsf/core"
-        xmlns:cc="http://java.sun.com/jsf/composite"
-        xmlns:ui="http://java.sun.com/jsf/facelets">
+        xmlns:h="http://xmlns.jcp.org/jsf/html"
+        xmlns:f="http://xmlns.jcp.org/jsf/core"
+        xmlns:cc="http://xmlns.jcp.org/jsf/composite"
+        xmlns:ui="http://xmlns.jcp.org/jsf/facelets">
 
     <cc:interface componentType="at.jsflive.CollapsiblePanel">
         <cc:attribute name="collapsed"/>
