--- a/jsf22-cc-empty-attribute/src/main/webapp/resources/jsflive/inputTest.xhtml
+++ b/jsf22-cc-empty-attribute/src/main/webapp/resources/jsflive/inputTest.xhtml
@@ -1,8 +1,8 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <ui:composition xmlns="http://www.w3.org/1999/xhtml"
-        xmlns:h="http://java.sun.com/jsf/html"
-        xmlns:cc="http://java.sun.com/jsf/composite"
-        xmlns:ui="http://java.sun.com/jsf/facelets">
+        xmlns:h="http://xmlns.jcp.org/jsf/html"
+        xmlns:cc="http://xmlns.jcp.org/jsf/composite"
+        xmlns:ui="http://xmlns.jcp.org/jsf/facelets">
 
     <cc:interface>
         <cc:attribute name="value"/>
