update HTML5 example and added jQuery

--- a/jsf22-html5/src/main/webapp/personDetails.xhtml
+++ b/jsf22-html5/src/main/webapp/personDetails.xhtml
@@ -27,6 +27,11 @@
         </h:panelGrid>
 
         <br/>
+        <a jsf:outcome="editPerson" title="Edit Person">
+            Edit
+            <f:param name="id" value="#{personPage.selectedPerson.id}"/>
+        </a>
+        &#160;
         <a jsf:outcome="personList" title="Back to person list">Back</a>
     </form>
 </body>
