--- a/jsf22-html5/src/main/webapp/editPerson.xhtml
+++ b/jsf22-html5/src/main/webapp/editPerson.xhtml
@@ -3,19 +3,40 @@
         xmlns:f="http://xmlns.jcp.org/jsf/core"
         xmlns:h="http://xmlns.jcp.org/jsf/html"
         xmlns:pt="http://xmlns.jcp.org/jsf/passthrough"
-        xmlns:jsf="http://xmlns.jcp.org/jsf" xmlns:cs="http://java.sun.com/jsf/html">
+        xmlns:jsf="http://xmlns.jcp.org/jsf">
 
 <f:metadata>
     <f:viewParam name="id" value="#{personPage.selectedId}"/>
     <f:viewAction action="#{personPage.loadPerson}"/>
 </f:metadata>
 
-<h:head><title>JSF 2.2 HTML5</title></h:head>
-<h:body>
-    <h:form id="form">
-        <h:inputText id="email" value="#{personPage.selectedPerson.email}"
-                pt:type="email" pt:placeholder="Enter email"/>
-        <h:commandButton action="personDetails" value="Save"/>
-    </h:form>
-</h:body>
+<head jsf:id="head">
+    <title>JSFlive JSF 2.2 - HTML5</title>
+</head>
+<body jsf:id="body">
+    <form jsf:id="form">
+        <h:messages/>
+        <h:panelGrid columns="2">
+            <h:outputText value="ID:"/>
+            <h:outputText value="#{personPage.selectedPerson.id}"/>
+            <label jsf:for="name">Name:</label>
+            <input type="text" jsf:id="name" jsf:value="#{personPage.selectedPerson.name}"
+                    placeholder="Enter name" data-required="true">
+                <f:validateLength minimum="3"/>
+            </input>
+            <label jsf:for="email">Email:</label>
+            <h:inputText id="email" value="#{personPage.selectedPerson.email}"
+                    pt:type="email" pt:placeholder="Enter email" pt:data-required="true">
+                <f:validateLength minimum="3"/>
+            </h:inputText>
+        </h:panelGrid>
+
+        <button jsf:action="personDetails?faces-redirect=true&amp;includeViewParams=true">Submit</button>
+    </form>
+
+    <script type="text/javascript" jsf:name="jquery-1.10.2.min.js" jsf:target="head"></script>
+
+    <script type="text/javascript" jsf:name="script.js"></script>
+
+</body>
 </html>
