--- a/jsf22-res-lib-contracts/webapp/src/main/webapp/special/test3.xhtml
+++ b/jsf22-res-lib-contracts/webapp/src/main/webapp/special/test3.xhtml
@@ -3,7 +3,6 @@
         "http://www.w3.org/TR/xhtml1/DTD/xhtml1-transitional.dtd">
 <html xmlns="http://www.w3.org/1999/xhtml"
         xmlns:ui="http://xmlns.jcp.org/jsf/facelets"
-        xmlns:f="http://xmlns.jcp.org/jsf/core"
         xmlns:h="http://xmlns.jcp.org/jsf/html">
 <head>
     <title>JSFlive JSF 2.2 Resource Library Contracts</title>
@@ -23,8 +22,8 @@
             <p>Content 3</p>
 
             <p>
-                <h:link outcome="test1" value="Test 1"/>
-                <h:link outcome="test2" value="Test 2" style="margin-left: 8px"/>
+                <h:link outcome="/test1" value="Test 1"/>
+                <h:link outcome="/test2" value="Test 2" style="margin-left: 8px"/>
             </p>
         </ui:define>
 
