updated resource library contracts example

--- a/jsf22-res-lib-contracts/webapp/src/main/webapp/contracts/contract1/template.xhtml
+++ b/jsf22-res-lib-contracts/webapp/src/main/webapp/contracts/contract1/template.xhtml
@@ -13,6 +13,7 @@
         <ui:insert name="header"/>
     </div>
     <div class="content">
+        <h:graphicImage library="images" name="test.png"/>
         <ui:insert name="content"/>
     </div>
 </h:body>
