--- a/jsf22-res-lib-contracts/webapp/src/main/webapp/test1.xhtml
+++ b/jsf22-res-lib-contracts/webapp/src/main/webapp/test1.xhtml
@@ -18,7 +18,7 @@
         <ui:define name="content">
             <h2>Header 1</h2>
 
-            <p>Content 1</p>
+            <p>Content 1 <h:graphicImage library="images" name="test.png"/></p>
 
             <p>
                 <h:link outcome="/test2" value="Test 2"/>
