--- a/jsf22-res-lib-contracts/webapp/src/main/webapp/test2.xhtml
+++ b/jsf22-res-lib-contracts/webapp/src/main/webapp/test2.xhtml
@@ -19,7 +19,7 @@
         <ui:define name="content">
             <h2>Header 2</h2>
 
-            <p>Content 2</p>
+            <p>Content 2 <h:graphicImage library="images" name="test.png"/></p>
 
             <p>
                 <h:link outcome="/test1" value="Test 1"/>
