added flows to flows example

--- a/jsf22-flows/src/main/webapp/flowTest.xhtml
+++ b/jsf22-flows/src/main/webapp/flowTest.xhtml
@@ -12,6 +12,8 @@
     <h:panelGrid coulns="1">
         <h:link value="Start flow1 (implicit)" outcome="flow1"/>
         <h:link value="Start flow2 (config)" outcome="flow2"/>
+        <h:link value="Start flow3 (config, flow scoped bean)" outcome="flow3"/>
+        <h:link value="Start flow4 (config, flow scoped bean, explicit start node)" outcome="flow4"/>
     </h:panelGrid>
 </h:body>
 </html>
