added flows to flows example

--- a/jsf22-flows/src/main/webapp/flow4/step1.xhtml
+++ b/jsf22-flows/src/main/webapp/flow4/step1.xhtml
@@ -18,6 +18,7 @@
             <h:inputText id="value2" value="#{flow4Bean.value2}"/>
         </h:panelGrid>
         <h:commandButton value="Next" action="final"/>
+        <h:commandButton value="Call Flow 5" action="callFlow5"/>
     </h:form>
 </h:body>
 </html>
