--- a/jsf22-flows/src/main/webapp/flow5/flow5.xhtml
+++ b/jsf22-flows/src/main/webapp/flow5/flow5.xhtml
@@ -2,26 +2,22 @@
 <!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Transitional//EN"
         "http://www.w3.org/TR/xhtml1/DTD/xhtml1-transitional.dtd">
 <html xmlns="http://www.w3.org/1999/xhtml"
-      xmlns:f="http://xmlns.jcp.org/jsf/core"
-      xmlns:h="http://xmlns.jcp.org/jsf/html">
+        xmlns:f="http://xmlns.jcp.org/jsf/core"
+        xmlns:h="http://xmlns.jcp.org/jsf/html">
 <h:head>
     <title>JSFlive JSF 2.2 - Faces Flows</title>
 </h:head>
 <h:body>
-    <h1>Flow4</h1>
+    <h1>Flow5</h1>
 
     <h:form id="form">
         <h:panelGrid columns="2">
+            <h:outputText value="Param 1:"/>
+            <h:outputText value="#{flowScope.param1}"/>
             <h:outputText value="Value 1:"/>
-            <h:outputText value="#{flow4Bean.value1}"/>
-            <h:outputText value="Value 2:"/>
-            <h:outputText value="#{flow4Bean.value2}"/>
-            <h:outputText value="Value 1 (Flow Scope):"/>
             <h:outputText value="#{flowScope.value1}"/>
-            <h:outputText value="Value 2 (Flow Scope):"/>
-            <h:outputText value="#{flowScope.value2}"/>
         </h:panelGrid>
-        <h:commandButton value="Finish" action="return"/>
+        <h:commandButton value="Set value via method call node" action="storeValues"/>
     </h:form>
 </h:body>
 </html>
