fixed typo in flows example

--- a/jsf22-flows/src/main/webapp/flowTest.xhtml
+++ b/jsf22-flows/src/main/webapp/flowTest.xhtml
@@ -9,7 +9,7 @@
     <title>JSFlive JSF 2.2 - Faces Flows</title>
 </h:head>
 <h:body>
-    <h:panelGrid coulns="1">
+    <h:panelGrid columns="1">
         <h:link value="Start flow1 (implicit)" outcome="flow1"/>
         <h:link value="Start flow2 (XML config)" outcome="flow2"/>
         <h:link value="Start flow3 (XML config, flow scoped bean)" outcome="flow3"/>
